Renamed the entire service for Annora

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:aditya123@localhost:5432/connectify-auth
+DATABASE_URL=postgresql://postgres:aditya123@localhost:5432/annora-auth
 JWT_SECRET=a-string-secret-at-least-256-bits-long
 JWT_EXP=30		# in minutes
 REFRESH_EXP=15	# in days
